# bot_fodifood

./: .env.example  .gitignore  AI_CONTROL_SYSTEM.md  AI_INVESTMENT_ROADMAP.md  AI_LOGGING.md  AI_MODULE_STRUCTURE.md  AI_SESSION_SUMMARY.md  ANCHOR_REMOVED.md  API_ENDPOINTS.md  ARCHITECTURE.md  CHANGELOG.md  COGNITIVE_LAYER.md  CONTRIBUTING.md  CURRENT_STATUS.md  Cargo.toml  DATABASE_REFACTORING_PLAN.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PLAN.md  DEVELOPMENT.md  Dockerfile  EXAMPLES.md  FODI_TOKEN_SUCCESS.txt  FODI_TRANSFERS.md  GET_SOL.md  GO_BACKEND_LIVE.md  GROQ_COMPLETE.md  GROQ_INTEGRATION.md  HUMAN_CHAT_TEST.md  IMPROVEMENTS_DONE.md  INTEGRATION_COMPLETE.md  KEYPAIRS_SUMMARY.md  LICENSE  MEMORY_DEMO.md  METADATA_UPDATED.txt  METRICS_DASHBOARD.md  MIGRATIONS_FIXED.md  MIGRATION_STATUS.md  MIGRATION_SUMMARY.txt  MULTILINGUAL.md  (+41 more)
.github/: SECRETS_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml
assets/: README.md  fodi-metadata.json
data/ai_cache.db/: db
data/fodi_ledger.db/: db  snap.0000000000000161
data/local_agents.db/: db  snap.0000000000004899  snap.0000000000006E4D
data/wallets.db/: db  snap.00000000000002A6
examples/: advanced_workflow_demo.rs  agent_comprehensive_test.rs  agent_coordination_demo.rs  ai_airdrop_demo.rs  ai_backend_visibility_test.rs  ai_backend_visibility_v2.rs  ai_logging_test.rs  business_analysis_demo.rs  business_brain_demo.rs  check_bank_ledger.rs  check_wallets.rs  context_memory_demo.rs  control_layer_test.rs  copilot_agent.rs  demo_database.rs  economy_loop_demo.rs  go_client_demo.rs  groq_demo.rs  groq_test.rs  investment_analyzer_demo.rs  language_detection.rs  multilang_intent.rs  multilang_test.rs  social_mission_demo.rs  test_backend_orchestrator.rs  test_db_conn.rs  test_go_backend_control.rs
migrations/: 001_create_schemas.sql  002_create_ai_tables.sql  003_create_blockchain_tables.sql  004_create_analytics_tables.sql  005_create_functions.sql  006_permissions.sql
src/: config.rs  lib.rs  main.rs  state.rs
src/ai/: admin_assistant.rs  agent.rs  agent_manager.rs  agent_state.rs  airdrop_agent.rs  analysis.rs  business_analyzer.rs  business_economy_loop.rs  cache.rs  control.rs  control.rs.broken  governance.rs  growth_campaign.rs  intent_handler.rs  intents.rs  investment_analyzer.rs  memory.rs  mod.rs  persistent_memory.rs  shared_bus.rs  social_tasks.rs  thinker.rs
src/api/: admin_ws.rs  backend_control.rs  businesses.rs  go_backend.rs  insight_ws.rs  metrics.rs  mod.rs  rest.rs  solana.rs  user.rs
src/bank/: README.md  api.rs  exchange.rs  ledger.rs  mod.rs  onchain.rs  rewards.rs
src/config/: backend_config.rs
src/database/: ai.rs  analytics.rs  blockchain.rs  mod.rs
src/handlers/: insight_broadcaster.rs  insight_events.rs  mod.rs  webhook.rs  ws.rs
src/metrics/: mod.rs
src/models/: message.rs  user.rs
src/nft/: README.md  api.rs  marketplace.rs  metadata.rs  mint.rs  mod.rs  onchain.rs
src/orchestration/: backend.rs  health.rs  mod.rs
src/services/: mod.rs  (+1 more)
(+55 files in other folders)
